--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --caloryCard: #656565;
   --planCard: linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
   --appColor:  #3c3f45;
+  --pink: rgb(194, 145, 153);
 }
 .App {
   text-align: center;
