--- a/src/Components/Aboutme/Aboutme.css
+++ b/src/Components/Aboutme/Aboutme.css
@@ -1,3 +1,18 @@
+.jumbotron-ab{
+  margin: 0px auto;
+  padding: 80px 40px;
+  border-top: 2px solid rgb(194, 145, 153) ;
+  color: floralwhite;
+  width: 100%;
+  text-align: left;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.titulo-ab{
+  color:rgb(194, 145, 153);
+  font-size: 22px;
+  text-align: left; 
+}
 .separacion{
     width: 100%;
     height: 20px;
@@ -5,17 +20,61 @@
 .about2{
     margin: 1rem 0 0.1rem 0;
     font-size: 16px;
-    color:darkgoldenrod;
+    color:rgb(194, 145, 153);
     text-align: justify;
 }
 .about{
-color:white;
-font-size: 22px;
+  color:white;
+  font-size: 22px;
 }
 .foto{
-width: 200px;
-height: 200px;
-margin: 1rem 0  1rem 0;
-border-radius: 50%;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  left: 13rem;
+  
+  margin: 1rem 0  1rem 0;
+  border:1px solid rgb(194, 145, 153) ;
+  border-radius: 5px;
+  z-index: 99;
+}
+.circulo{
+  background-color: rgb(194, 145, 153);
+  width: 200px;
+  height: 210px;
+  margin-right: 10rem;
+  border: 2px solid rgb(194, 145, 153);
+  right: 12rem;
+}
+
+@media screen and (max-width: 768px){
+  .about{
+    font-size:small;
+    right: 0;
+    left: 155px;
+  }
+  
+  .foto{
+    width: 150px;
+    height: 150px;
+    
+    left: 0;
+    flex-direction: column;
+    align-self: center;
+  
+  }
+  .circulo{
+    width: 150px;
+    height: 150px;
+    left: 0;
+    
+  }
+  .jumbotron-ab{
+    display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+  }
 }
   
