--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -1,1 +1,86 @@
- 
+.edu-titulo{
+    font-size: 18px;
+    font-weight: bold;
+    margin: 1rem 0 0.5rem 0;
+    color:white;
+}
+  
+.edu-empresa{
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+  
+.edu-lugar{
+    font-size: 12px;
+    font-weight: lighter;
+    color:black;
+    margin-bottom: 0px;
+    padding: 0.1rem 0 0.1rem 0;
+}
+  
+.edu-fecha{
+    font-size: 12px;
+    font-weight: lighter;
+    color: black; 
+    margin-bottom: 0px;
+    padding: 0.1rem 0 0.1rem 0;
+}
+.titulo-edu{
+    color: var(--appcolor);
+    font-size: 20px;
+} 
+.cuadrado_edu{
+    min-height: 150px;
+    padding-bottom: 2px;
+    border-bottom: 1px solid var(--appcolor);
+    width: 100%;
+    text-align: left;
+   
+}
+
+.imagen-edu{
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+}
+.imagen-edu:hover{
+    box-shadow: 0px 0px 80px rgba(102, 102, 102, 0.5);
+    border: 3px solid #3c3f45;
+}
+.separacion{
+    width: 100%;
+    height: 20px;
+}
+.jumbotron_edu {
+    margin: 0px auto;
+    padding: 80px 40px;
+    background-color: rgb(194, 145, 153);
+    width: 100%;
+    text-align: left;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-top: 1px solid var(--appcolor);
+}
+.container-edu{
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+}
+@media screen and (max-width: 768px){
+    .container-edu{
+        grid-template-columns: 1fr;
+    }
+    .edu-empresa{
+        font-size: small;
+    }
+    .edu-titulo{
+        font-size: medium;
+    }
+    .imagen{
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        margin-top: 1rem;
+        margin-left: 2.5rem;
+    }
+}    
