--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,42 +1,57 @@
 .header{
-    background: var(--planCard);
+    background-color: var(--appColor);
+    width: 100%;
+    height: 95px;
+    position: fixed;
+    z-index: 99;
 }
-
-.menu .navbar-nav .nav-link {
-   
-    color:yellow;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight:700;
+.navbar-nav{
+    margin-left: 32rem;
     padding: 2rem;
-    font-size: 1rem;
-  }
-  
-  .menu .navbar-nav .nav-link:hover{
-    color: lightgoldenrodyellow;
-  }
-  .logo {
-	margin-bottom: 1rem;
-	font-family:'Courier New', Courier, monospace;
-    font-style: italic;
-	text-align:justify;
-    text-decoration: none;
-	border-radius: 50%;
-    padding: 0.3125em;
-	border: 2px solid white;
-	display: inline-block;
-	font-size: 2.5rem;
-    color: gold;
-	margin-bottom: 0.9375em;
-    margin-top: 1rem;
-    z-index: auto;
 }
-
-
-
+.menu .navbar-nav .nav-link {
+    color:rgb(194, 145, 153);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight:700;
+    margin: 2px;
+    font-size: 1.1rem;
+    list-style: none;
+    background-color: var(--appColor);
+    gap: 1rem;
+    cursor: pointer;
+    margin-left: 2rem;
+}
+.menu .navbar-nav .nav-link:hover{
+    color: lightgoldenrodyellow;
+}
+.logo {
+    margin-bottom: 1rem;
+    font-family:'Courier New', Courier, monospace;
+    font-style: italic;
+    text-align:justify;
+    text-decoration: none;
+    border-radius: 50%;
+    padding: 0.3rem;
+    border: 2px solid white;
+    display: inline-block;
+    font-size: 2.5rem;
+    color: rgb(194, 145, 153);
+    z-index: auto;
+    left: 20px;
+}
+.logo:hover{
+    color: white;
+    border: 2px solid rgb(194, 145, 153);
+}
 .logo .iniciales-logo {
 	padding: 0.3125em;
-	border: 2px solid yellow;
+	border: 2px solid rgb(194, 145, 153);
 	display: inline-block;
 	font-size: 1rem;
 	margin-bottom: 0.9375em;
 }
+ @media screen and (max-width: 768px){
+    .logo{
+        font-size: 1.5rem;
+    }
+} 
