--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,19 +1,14 @@
 .footer {
     color: var(--pink);
     width: 100%;
-    height: 11rem;
-    padding: 0em;
+        
     font-size: 0.9375rem;
     border-top: 1px solid var(--pink);
     bottom: 0.5rem;
+    margin: 0px auto;
+    padding: 20px 0px;
 }
-.container-footer {
-    display: grid;
-    align-content: space-between;
-    gap: 10px;
-    padding: 0.625rem;
-    grid-template-columns: repeat(3,auto)
-}
+
 .link2{
     color: var(--pink);
     text-decoration: none;
@@ -41,8 +36,17 @@
     color: white;
 }
 @media screen and (max-width: 768px){
-    .container-footer{
-        grid-template-columns: 1fr;
+    .footer{
+        font-size: 13px;
+    }
+    .link{
+        font-size: small;
+    }
+    .link2{
+        font-size: small;
+    }
+    .footer h5{
+        font-size: medium;
     }
 }
   
