--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,20 +5,21 @@
     position: fixed;
     z-index: 99;
 }
-.navbar-nav{
-    padding: 2rem;
+.nav-item{
+    padding-left: 15px;
+}
+.icono-nav{
+    margin-right: 5px;
 }
 .menu .navbar-nav .nav-link {
     color:rgb(194, 145, 153);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight:700;
-    margin: 2px;
     font-size: 1.1rem;
     list-style: none;
     background-color: var(--appColor);
     gap: 1rem;
     cursor: pointer;
-    margin-left: 2rem;
 }
 .menu .navbar-nav .nav-link:hover{
     color: lightgoldenrodyellow;
@@ -49,7 +50,13 @@
 	font-size: 1rem;
 	margin-bottom: 0.9375em;
 }
- @media screen and (max-width: 768px){
+@media screen and (max-width: 820px){
+    .nav-item{
+        padding-left: 1px;
+    }
+} 
+
+@media screen and (max-width: 768px){
     .logo{
         font-size: 1.5rem;
     }
