--- a/src/Components/Certifications/Certifications.css
+++ b/src/Components/Certifications/Certifications.css
@@ -1,11 +1,3 @@
-.container-cert{
-    display: grid;
-    grid-template-columns: auto auto;
-}
-.cert-container{
-    display: grid;
-    grid-template-columns: auto auto;
-}
 .cert-titulo{
     font-size: 18px;
     font-weight: bold;
@@ -36,7 +28,7 @@
     text-align: left;
 }
 .espacio{
-    width: 500px;
+    width: 200px;
 }
 .line{
     width: 100%;
@@ -69,12 +61,6 @@
 } 
 
 @media screen and (max-width: 768px){
-    .container-cert{
-        grid-template-columns: 1fr;
-    }
-    .cert-container{
-        grid-template-columns: 1fr;
-    }
     .cert-fecha{
         text-align: left;
         margin-left:1rem;
@@ -85,20 +71,18 @@
         margin-left:1rem;
     }
     .cert-empresa{
-        font-size: small;
+        font-size:x-small;
         text-align: left;
         margin-left:1rem;
     }
-    .espacio{
-        width: 10px;
-    }
+    
     .imagen-cert{
         width: 40px;
         height: 40px;
         left: 0;
         border: 2px solid white;
     }
-    .espacio{
-        width: 1rem;
+    .cuadrado_cert{
+        width: 100%;
     }
 }   
