--- a/src/Components/Experiences/Experiences.css
+++ b/src/Components/Experiences/Experiences.css
@@ -32,7 +32,7 @@
     width: 75%;  
 }
 .espacio-exp{
-    width: 230px;
+    width: 500px;
 }
 .titulo-exp{
     color: var(--appcolor);
@@ -64,6 +64,10 @@
 .container-grid{
     display: grid;
     grid-template-columns: auto auto;
+}
+.separacion-exp{
+    width: 100%;
+    height: 30px;
 } 
 @media screen and (max-width: 768px) {
     .container-grid{
