--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -410,4 +410,9 @@
         margin-left: 1rem;
     }
 }
+@media screen and (max-width: 820px){
+    .habilidades-blandas{
+        font-size: small;
+    }
+}
   
